objects/COO_Escalation__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Resolution_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Actual Resolution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assigned_to_COO_Office__c</fullName>
        <label>Assigned to COO Office</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Add COO direct reports</fullName>
                    <isActive>false</isActive>
                    <label>Add COO direct reports</label>
                </value>
                <value>
                    <fullName>Alison Forte</fullName>
                    <isActive>false</isActive>
                    <label>Alison Forte</label>
                </value>
                <value>
                    <fullName>Anne DeFusco</fullName>
                </value>
                <value>
                    <fullName>Brian Williams</fullName>
                    <isActive>false</isActive>
                    <label>Brian Williams</label>
                </value>
                <value>
                    <fullName>Cheryl Gibson</fullName>
                </value>
                <value>
                    <fullName>Cory Courtney</fullName>
                </value>
                <value>
                    <fullName>Dan Brier</fullName>
                </value>
                <value>
                    <fullName>Denise Tomechko</fullName>
                </value>
                <value>
                    <fullName>Gina Arnold</fullName>
                </value>
                <value>
                    <fullName>Joe Garrett</fullName>
                </value>
                <value>
                    <fullName>Matt Borner</fullName>
                </value>
                <value>
                    <fullName>Monica Kaufman</fullName>
                </value>
                <value>
                    <fullName>William Potter</fullName>
                    <isActive>false</isActive>
                    <label>William Potter</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>COO_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>COO Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Connected_to_Transformation_Initiative__c</fullName>
        <inlineHelpText>Does this issue connect with an existing Transformation Initiative?</inlineHelpText>
        <label>Connected to Transformation Initiative?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description_Background__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description/Background</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_of_Final_Resolution__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description of Final Resolution</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Escalated_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Escalated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Escalated_To__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Escalated To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escalated_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Escalated by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CEP_Escalation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Request__c</fullName>
        <label>External Request</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issue_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>To be completed by requestor</inlineHelpText>
        <label>Issue Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_Status__c</fullName>
        <label>Issue Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Investigating</fullName>
                </value>
                <value>
                    <fullName>Implementing</fullName>
                </value>
                <value>
                    <fullName>Escalated</fullName>
                </value>
                <value>
                    <fullName>Resolved/Closed</fullName>
                </value>
                <value>
                    <fullName>Opened in Error/Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issue_type__c</fullName>
        <label>Issue type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Clinical</fullName>
                </value>
                <value>
                    <fullName>External Facing</fullName>
                </value>
                <value>
                    <fullName>Migrations</fullName>
                </value>
                <value>
                    <fullName>Web/Mobile</fullName>
                </value>
                <value>
                    <fullName>Network</fullName>
                </value>
                <value>
                    <fullName>Operational</fullName>
                </value>
                <value>
                    <fullName>Privacy/Security</fullName>
                </value>
                <value>
                    <fullName>Product, Reporting</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <isActive>false</isActive>
                    <label>Other</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <description>DO NOT DELETE. Used in a Workflow Rule</description>
        <formula>LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified Date_Clone</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Priority_Level__c</fullName>
        <label>Priority Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Process Improvement Idea Only</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <formula>CreatedBy.FirstName + &quot;  &quot; + CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requestor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_COO_intervention__c</fullName>
        <label>Required COO intervention</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SME_Assigned__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SME Assigned</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Resolution_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Target Resolution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Title</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Urgent_Resolution_Required__c</fullName>
        <inlineHelpText>Answer Yes If
Requires Resolution in 48 Hours</inlineHelpText>
        <label>Urgent Resolution Required</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_is_the__c</fullName>
        <label>What is the #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>COO Escalation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Priority_Level__c</columns>
        <columns>Issue_Status__c</columns>
        <columns>Assigned_to_COO_Office__c</columns>
        <columns>Escalated_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Open_Issues</fullName>
        <columns>NAME</columns>
        <columns>Priority_Level__c</columns>
        <columns>Assigned_to_COO_Office__c</columns>
        <columns>Issue_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Issue_Status__c</field>
            <operation>notEqual</operation>
            <value>Resolved/Closed</value>
        </filters>
        <label>Open Issues</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>COO Escalation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>COO Escalation</pluralLabel>
    <recordTypes>
        <fullName>CEP_Escalation</fullName>
        <active>true</active>
        <label>COO Escalation</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Final_Resolution_Required</fullName>
        <active>true</active>
        <description>Description of Final Resolution field is required when Issue Status is &quot;Resolved/Closed&quot;</description>
        <errorConditionFormula>AND(
ISBLANK( Description_of_Final_Resolution__c ),
 ISPICKVAL( Issue_Status__c , &quot;Resolved/Closed&quot;))</errorConditionFormula>
        <errorDisplayField>Description_of_Final_Resolution__c</errorDisplayField>
        <errorMessage>Final Resolution field is required when Issue Status is &quot;Resolved/Closed&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Urgent_Resolution_Required_Date</fullName>
        <active>true</active>
        <description>If Urgent Resolution field is required then Escalated Date field must be populated</description>
        <errorConditionFormula>AND(
 ISBLANK( Escalated_Date__c ) ,
ISPICKVAL( Urgent_Resolution_Required__c , &apos;Yes&apos;))</errorConditionFormula>
        <errorDisplayField>Escalated_Date__c</errorDisplayField>
        <errorMessage>If Urgent Resolution field is required then Escalated Date field must be populated</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>What_is_the_number_and_Title_Required</fullName>
        <active>true</active>
        <description>When Connected to Transformation Initiative? is yes then What is the # and Title fields are required.</description>
        <errorConditionFormula>AND(
ISBLANK(  Title__c  ),
ISBLANK(   What_is_the__c   ),
 ISPICKVAL(  Connected_to_Transformation_Initiative__c , &quot;Yes&quot;))</errorConditionFormula>
        <errorMessage>When Connected to Transformation Initiative? is YES then &quot;What is the #&quot; and &quot;Title&quot; fields are required.</errorMessage>
    </validationRules>
</CustomObject>